style: use title case for form section headers

--- a/app/views/devise/registrations/_edit_user.html.erb
+++ b/app/views/devise/registrations/_edit_user.html.erb
@@ -128,7 +128,7 @@
   </div>
 
   <div class="py-6 mt-6 border-t border-slate-200 dark:border-slate-700">
-    <h2 class="mb-2 text-lg font-normal text-slate-700 dark:text-slate-200">Contact information</h2>
+    <h2 class="mb-2 text-lg font-normal text-slate-700 dark:text-slate-200">Contact Information</h2>
     <p class="text-sm text-slate-600 dark:text-slate-400">Choose whether this information will be visible to other users.</p>
   </div>
 
@@ -173,7 +173,7 @@
   </div>
 
   <div class="py-6 mt-6 border-t border-slate-200 dark:border-slate-700">
-    <h2 class="mb-2 text-lg font-normal text-slate-700 dark:text-slate-200">Personal details</h2>
+    <h2 class="mb-2 text-lg font-normal text-slate-700 dark:text-slate-200">Personal Details</h2>
     <p class="text-sm text-slate-600 dark:text-slate-400">This information will only be visible to your coaches and other team members.</p>
   </div>
 
