--- a/app/views/users/_edit_settings.html.erb
+++ b/app/views/users/_edit_settings.html.erb
@@ -11,7 +11,7 @@
 
   <%= form.fields_for :settings do |settings_form| %>
     <div class="my-6">
-      <h2 class="mb-2 text-lg font-normal text-slate-700 dark:text-slate-200">Contact information</h2>
+      <h2 class="mb-2 text-lg font-normal text-slate-700 dark:text-slate-200">Contact Information</h2>
       <p class="text-sm text-slate-600 dark:text-slate-400">Display your contact information to other users on your profile.</p>
     </div>
 
