--- a/app/views/teams/index/_membered_teams.html.erb
+++ b/app/views/teams/index/_membered_teams.html.erb
@@ -7,6 +7,9 @@
 <% else %>
   <div class="flex flex-col items-center justify-center gap-6 py-12">
     <p class="text-soft text-center">You're not a member of any teams yet.</p>
-    <%= link_to 'Find a team', teams_path(tab: 'otherTeamsTab'), class: 'btn btn-white' %>
+    <%= link_to teams_path(tab: 'otherTeamsTab'), class: 'btn btn-dark btn-muted gap-2' do %>
+      <%= inline_svg_tag 'icons/search.svg', class: 'size-4.5' %>
+      <span>Find a team</span>
+    <% end %>
   </div>
 <% end %>
