--- a/app/views/devise/registrations/_edit_user.html.erb
+++ b/app/views/devise/registrations/_edit_user.html.erb
@@ -17,12 +17,46 @@
   class="form-group"
 >
   <% if current_user.provider.present? %>
-    <button data-action="click->modal#open" data-modal-id="unlinkGoogleAccountModal" class="btn btn-white btn-outline gap-2" <%= 'disabled' unless resource.password_ever_changed? %>>
+    <button data-action="click->modal#open" data-modal-id="unlinkGoogleAccountModal" <%= 'disabled' if resource.password_never_changed? %> class="btn btn-white btn-outline gap-2">
       <%= inline_svg_tag 'icons/google-logo.svg', class: 'size-5' %>
       Unlink Google Account
     </button>
-    <% unless resource.password_ever_changed? %>
+    <% if resource.password_never_changed? %>
       <p class="error-message my-1">You must set a password to unlink your Google account.</p>
+    <% else %>
+      <!-- Unlink Google Account Modal Backdrop -->
+      <div
+        data-modal-target="backdrop"
+        data-modal-id="unlinkGoogleAccountModal"
+        data-action="click->modal#backdropClose"
+        class="modal-backdrop opacity-0 pointer-events-none"></div>
+
+      <!-- Unlink Google Account Modal -->
+      <div
+        id="unlinkGoogleAccountModal"
+        role="dialog"
+        tabindex="-1"
+        data-modal-target="modal"
+        class="modal opacity-0 pointer-events-none"
+      >
+        <div class="flex flex-col space-y-1.5 text-center sm:text-left">
+          <h2 class="text-lg font-semibold leading-none tracking-tight">Unlink Google Account?</h2>
+          <p class="text-soft text-sm">Are you sure you want to unlink your Google account? You will no longer be sign in with your Google account.</p>
+        </div>
+
+        <div class="flex flex-col-reverse sm:flex-row sm:justify-end sm:space-x-2 mt-4">
+          <button data-action="click->modal#close" data-modal-id="unlinkGoogleAccountModal" type="button" class="btn btn-dark btn-muted mt-2 sm:mt-0">Nevermind</button>
+          <%= button_to unlink_google_account_user_path(current_user), method: :delete, class: 'btn btn-white btn-outline gap-2' do %>
+            <%= inline_svg_tag 'icons/google-logo.svg', class: 'size-5' %>
+            Unlink Google Account
+          <% end %>
+        </div>
+
+        <button data-action="click->modal#close" type="button" data-modal-id="unlinkGoogleAccountModal" class="modal-x-btn">
+          <%= inline_svg_tag 'icons/x-mark.svg', class: 'size-4' %>
+          <span class="sr-only">Close</span>
+        </button>
+      </div>
     <% end %>
   <% else %>
     <%= button_to user_google_oauth2_omniauth_authorize_path, data: { turbo: 'false' }, class: 'btn btn-white btn-outline gap-2' do %>
@@ -31,41 +65,6 @@
     <% end %>
     <p class="help-text my-1">The email on your Google account must match the email on your TeamRunner account.</p>
   <% end %>
-
-  <!-- Unlink Google Account Modal Backdrop -->
-  <div
-    data-modal-target="backdrop"
-    data-modal-id="unlinkGoogleAccountModal"
-    data-action="click->modal#backdropClose"
-    class="modal-backdrop opacity-0 pointer-events-none"></div>
-
-  <!-- Unlink Google Account Modal -->
-  <div
-    id="unlinkGoogleAccountModal"
-    role="dialog"
-    tabindex="-1"
-    data-modal-target="modal"
-    class="modal opacity-0 pointer-events-none"
-  >
-    <div class="flex flex-col space-y-1.5 text-center sm:text-left">
-      <h2 class="text-lg font-semibold leading-none tracking-tight">Unlink Google Account?</h2>
-      <p class="text-soft text-sm">Are you sure you want to unlink your Google account? You will no longer be sign in with your Google account.</p>
-    </div>
-
-    <div class="flex flex-col-reverse sm:flex-row sm:justify-end sm:space-x-2 mt-4">
-      <button data-action="click->modal#close" data-modal-id="unlinkGoogleAccountModal" type="button" class="btn btn-dark btn-muted mt-2 sm:mt-0">Nevermind</button>
-      <%= button_to unlink_google_account_user_path(current_user), method: :delete, class: 'btn btn-white btn-outline gap-2' do %>
-        <%= inline_svg_tag 'icons/google-logo.svg', class: 'size-5' %>
-        Unlink Google Account
-      <% end %>
-    </div>
-
-    <button data-action="click->modal#close" type="button" data-modal-id="unlinkGoogleAccountModal" class="modal-x-btn">
-      <%= inline_svg_tag 'icons/x-mark.svg', class: 'size-4' %>
-      <span class="sr-only">Close</span>
-    </button>
-  </div>
-
 </div>
 
 <%= form_for resource, as: resource_name, url: registration_path(resource_name), data: { controller: "form-validation" }, html: { method: :put, novalidate: true } do |f| %>
