--- a/app/views/teams/member/_member_info.html.erb
+++ b/app/views/teams/member/_member_info.html.erb
@@ -95,9 +95,9 @@
                   <% (start_of_month..end_of_month).each do |date| %>
                     <div class="w-full h-8 aspect-square p-1 rounded-lg flex items-center justify-center
                       <%= case
-                          when member.long_run_on_day?(date, team)
+                          when @long_runs_by_date[date].present?
                             'bg-yellow-100 dark:bg-yellow-700/40 text-yellow-800 dark:text-yellow-400'
-                          when member.run_on_day?(date)
+                          when @runs_by_date[date].present?
                             'bg-indigo-200/60 dark:bg-indigo-800/40 text-indigo-600 dark:text-indigo-500'
                           when date == Date.current
                             'bg-indigo-500 dark:bg-indigo-600 text-white shadow dark:shadow-none'
