--- a/app/views/teams/shared/_team_links.html.erb
+++ b/app/views/teams/shared/_team_links.html.erb
@@ -1,7 +1,7 @@
 <% request = team.join_requests.find_by(user_id: current_user) %>
 <% current_page_team = current_page?(team_path(team)) %>
 
-<% if current_user.owns?(team) %>
+<% if @current_user_owns_team %>
   <%= link_to edit_team_path(team), class: 'dropdown-option-primary', data: { turbo: false } do %>
     <%= inline_svg_tag 'icons/pencil.svg', class: 'size-5' %>
     Edit team
@@ -12,11 +12,28 @@
     Edit team settings
   <% end %>
 
-<% elsif current_user.member_of?(team) %>
+<% elsif @current_user_member_of_team %>
   <button data-action="click->modal#open" data-modal-id="leaveTeam" class="dropdown-option-destructive">
     <%= inline_svg_tag 'icons/trash.svg', class: 'size-5' %>
     Leave team
   </button>
+
+  <% unless @current_user_owns_team %>
+    <%= link_to team_settings_path(@team), class: 'dropdown-option' do %>
+      <%= inline_svg_tag 'icons/settings.svg', class: 'size-5' %>
+      View team settings
+    <% end %>
+  <% end %>
+
+  <%= link_to team_member_path(@team, current_user), class: 'dropdown-option' do %>
+    <%= inline_svg_tag 'icons/user.svg', class: 'size-5' %>
+    View my member page
+  <% end %>
+
+  <%= link_to edit_team_team_membership_path(@team, current_user), class: 'dropdown-option-primary' do %>
+    <%= inline_svg_tag 'icons/user-pencil.svg', class: 'size-5' %>
+    Edit my personal goals
+  <% end %>
 
 <% else %>
   <% if team.gender_requirement_met?(current_user) %>
