--- a/app/views/teams/show/_recent_activity.html.erb
+++ b/app/views/teams/show/_recent_activity.html.erb
@@ -4,9 +4,8 @@
 </div>
 
 <div class="mb-10">
-  <% recent_runs =  team.recent_runs %>
-  <% if recent_runs.present? %>
-    <% recent_runs.each do |run| %>
+  <% if @recent_runs.present? %>
+    <% @recent_runs.each do |run| %>
       <%= render run, team: team %>
     <% end %>
   <% else %>
