--- a/app/views/teams/show/_trends.html.erb
+++ b/app/views/teams/show/_trends.html.erb
@@ -3,7 +3,7 @@
   <p class="text-soft">Recent trends in <%= team.name %>.</p>
 </div>
 
-<%= content_tag(:p, class: 'mb-2 text-right') { link_to 'View your personal trends', team_member_path(team, current_user, tab: 'trendsTab'), class: 'btn-link text-xs' } if current_user.member_of?(team) %>
+<%= content_tag(:p, class: 'mb-2 text-right') { link_to 'View your personal trends', team_member_path(team, current_user, tab: 'trendsTab'), class: 'btn-link text-xs' } if @current_user_member_of_team %>
 
 <div class="mb-24">
   <%= form_with url: team_path(team), method: :get, local: true, html: { novalidate: true }, data: { turbo_frame: 'teamTrends', turbo_action: 'advance', turbo_stream: true, controller: 'custom-date-range form-validation search-form' } do %>
